<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phronesis="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
        android:layout_width="fill_parent"
        android:layout_height="200.0dip"
        android:layout="@layout/soundpanel_logo" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Samsung Music Player"
        phronesis:componentName="com.sec.android.app.music/com.sec.android.app.music.common.activity.MusicMainActivity" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Beats Audio"
        phronesis:componentName="com.zloban.beatsfx/com.zloban.beatsfx.beatsAudioControlPanelActivity" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Viper4Android"
        phronesis:componentName="com.vipercn.viper4android_v2/com.vipercn.viper4android_v2.activity.ViPER4Android" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Dolby Atmos"
        phronesis:componentName="com.atmos.daxappUI/com.atmos.daxappUI.MainActivity" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Samsung Soundalive"
        phronesis:componentName="com.sec.android.app.soundalive/com.sec.android.app.soundalive.SAControlPanelActivity" />
    <PreferenceCategory android:title="Screen Off Music Control" />
    <PreferenceScreen
        android:icon="@drawable/music_control"
        android:summary="@string/volbtn_music_controls_summary"
        android:title="@string/volbtn_music_controls_title">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="volbtn_music_controls"
            android:title="@string/volbtn_toggle_title" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="400"
            android:dependency="volbtn_music_controls"
            android:entries="@array/volbtn_timeout_entries"
            android:entryValues="@array/volbtn_timeout_values"
            android:key="volbtn_timeout"
            android:title="@string/volbtn_timeout_title" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="87"
            android:dependency="volbtn_music_controls"
            android:entries="@array/volbtn_action_entries"
            android:entryValues="@array/volbtn_action_values"
            android:key="volbtn_vol_up"
            android:title="@string/volbtn_vol_up_title" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="88"
            android:dependency="volbtn_music_controls"
            android:entries="@array/volbtn_action_entries"
            android:entryValues="@array/volbtn_action_values"
            android:key="volbtn_vol_down"
            android:title="@string/volbtn_vol_down_title" />
    </PreferenceScreen>
</PreferenceScreen>