<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wubydax="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rebootMenuMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <View
        android:id="@+id/protectiveView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/protective_semi_transparent_black"/>

    <LinearLayout
        android:id="@+id/rebootContainer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="72dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        android:weightSum="3">

        <com.wubydax.romcontrol.v2.views.RebootView
            android:id="@+id/rebootDevice"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            wubydax:rebootColor="@color/colorAccent"
            wubydax:rebootText="@string/reboot_device_text"/>

        <com.wubydax.romcontrol.v2.views.RebootView
            android:id="@+id/rebootRecovery"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            wubydax:rebootColor="@color/colorPrimary"
            wubydax:rebootText="@string/reboot_recovery_text"/>

        <com.wubydax.romcontrol.v2.views.RebootView
            android:id="@+id/rebootUI"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            wubydax:rebootColor="@color/colorAccent"
            wubydax:rebootText="@string/reboot_ui_text"/>
    </LinearLayout>

</FrameLayout>